PyMaker/datas/object2/RawHTML/i13901/Python_DOC_referPages.regex101-generated-code-gives-error-python.txt
<div class="post-text" itemprop="text">
<p>I used <a href="https://www.regex101.com/#python" rel="nofollow">regex101</a> to test a simple regex (\D+\n*), but the code generated gives a syntax error. </p>
<pre><code>import re
p = re.compile(ur"\D+\n*", re.UNICODE)
test_str = u"2080 usec, 240 usec\n1780 usec, 260 usec\n700 usec, 240 usec\n700 usec, 240 usec\n2480 usec, 240 usec\n700 usec, 240 usec\n700 usec, 240 usec\n"
subst = u""

result = re.sub(p, subst, test_str)
</code></pre>
<p>What's wrong? Using python 3.4.3.</p>
</div>
<div class="post-text" itemprop="text">
<p>The <code>ur</code> prefix is <a href="https://docs.python.org/3/reference/lexical_analysis.html#string-and-bytes-literals" rel="nofollow">not supported in Python 3</a>. Use <code>r</code> instead. </p>
<p>Python 2.7:</p>
<pre><code>&gt;&gt;&gt; ur"\D+\n*"
u'\\D+\\n*'
</code></pre>
<p>Python 3:</p>
<pre><code>&gt;&gt;&gt; ur"foo"
  File "&lt;ipython-input-12-e07f08d3b66c&gt;", line 1
    ur"foo"
          ^
SyntaxError: invalid syntax
</code></pre>
<p>This is one of the least helpful Python errors I've seen, to be honest.</p>
</div>
<div class="post-text" itemprop="text">
<p>Use only <code>r</code> string prefix instead of <code>ur</code>.</p>
</div>
<div class="post-text" itemprop="text">
<p>If you import <code>re</code>, and use <code>re.compile(r'\D+\n*')</code>, it seems to work.</p>
<p>What exactly was wrong though I do not know.</p>
</div>
<span class="comment-copy">Can you provide the syntax error?</span>
<span class="comment-copy">It highlights the second " in "\D+\n*"</span>
<span class="comment-copy">Works fine for me.</span>
<span class="comment-copy">That shouldn't generate an error.</span>
<span class="comment-copy">Works great, why is this an issue?</span>
<span class="comment-copy">The combined prefix is not supported in the recent versions of Python3.</span>
<span class="comment-copy">doesn't really explain why the error was shown at the end of the literal though</span>
<span class="comment-copy">I do import, forgot to copy. THX</span>
